# rust-brew-app

./: Cargo.toml  README.md
src/: main.rs
ui/: appwindow.slint
